准备开始评论功能编写

--- a/src/main/resources/static/less/articleDetail.less
+++ b/src/main/resources/static/less/articleDetail.less
@@ -8,8 +8,12 @@
     flex: auto;
   }
 }
-#content-editormd {
-  img {
-    margin: 0 auto;
+#wrapper{
+  #content-editormd {
+    p {
+      display: flex;
+      align-items: center;
+      justify-content:center;
+    }
   }
 }
