--- a/src/main/resources/static/less/articleDetail.less
+++ b/src/main/resources/static/less/articleDetail.less
@@ -11,9 +11,13 @@
 #wrapper{
   #content-editormd {
     p {
-      display: flex;
-      align-items: center;
-      justify-content:center;
+      img {
+        display: block;
+        margin: 0 auto;
+      }
+      //display: flex;
+      //align-items: center;
+      //justify-content:center;
     }
   }
 }
